parse_entities_to_XML_and_JSON