@@ -15,10 +15,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
-public class ExcelDataLoader {
+public final class ExcelDataLoader {
     private static final int CELL_1 = 0;
     private static final int CELL_2 = 1;
     private static final int CELL_3 = 2;
@@ -38,11 +37,6 @@ public class ExcelDataLoader {
         return readData(filePath, sheetName, (ExcelDataLoader::parseUniversities));
     }
 
-    //ExcelDataLoader::parseU/S
-    //* Передача ссылки: Когда вы вызываете
-    // readData(path, name, ExcelDataLoader::parseUniversities),
-    // вы не запускаете парсинг. Вы просто передаете «инструкцию» (адрес метода) внутрь readData.
-
     private static <T> List<T> readData(String filePath, String sheetName, SheetParser<T> parser) {
         logger.info("Начало чтения файла; Путь: {}", filePath);
         Path path = Paths.get(filePath);
@@ -51,55 +45,59 @@ public class ExcelDataLoader {
                 Workbook workbook = new XSSFWorkbook(inputStream);
         ) {
             Sheet sheet = workbook.getSheet(sheetName);
-            if (sheet == null) {
-                logger.warn("Страница не обнаружена");
-                throw new NullPointerException("Sheet " + sheetName + " not found");
-            }
-            return parser.parse(sheet);
+
+            return Optional.ofNullable(sheet).map(s -> {
+                try {
+                    return parser.parse(s);
+                } catch (Exception e) {
+                    throw new RuntimeException(e);
+                }
+            }).orElseThrow(() -> {
+                logger.warn("Страница {} не обнаружена в файле: {}", sheetName, filePath);
+                return new NoSuchElementException("Sheet " + sheetName + " not found");
+            });
         } catch (Exception e) {
-            logger.error("Файл не найден: {}", e.getMessage());
+            logger.error("Файл {} не найден: {}", filePath, e.getMessage());
             return Collections.emptyList();
         }
     }
 
-    //метод по заданию
-    private static List<University> parseUniversities(Sheet sheet) throws NullPointerException {
+    private static List<University> parseUniversities(Sheet sheet) {
         List<University> universities = new ArrayList<>();
         Iterator<Row> rowIterator = sheet.rowIterator();
         rowIterator.next();
         while (rowIterator.hasNext()) {
             Row row = rowIterator.next();
-            if (row == null) {
-                logger.warn("Строка не обнаружена");
-                throw new NullPointerException("Row not found");
-            }
-            universities.add(new University(
-                    row.getCell(CELL_1).getStringCellValue(),
-                    row.getCell(CELL_2).getStringCellValue(),
-                    row.getCell(CELL_3).getStringCellValue(),
-                    (int) row.getCell(CELL_4).getNumericCellValue(),
-                    StudyProfile.valueOf(row.getCell(CELL_5).getStringCellValue())
-            ));
+
+            Optional.ofNullable(row).ifPresent(r -> {
+                universities.add(new University(
+                        row.getCell(CELL_1).getStringCellValue(),
+                        row.getCell(CELL_2).getStringCellValue(),
+                        row.getCell(CELL_3).getStringCellValue(),
+                        (int) row.getCell(CELL_4).getNumericCellValue(),
+                        StudyProfile.valueOf(row.getCell(CELL_5).getStringCellValue().trim())
+                ));
+            });
         }
         return universities;
     }
 
-    //Оставлю и такую реализацию
-    private static List<Student> parseStudents(Sheet sheet) throws NullPointerException {
+    private static List<Student> parseStudents(Sheet sheet) {
         return StreamSupport.stream(sheet.spliterator(), false)
                 .skip(1)
+                .map(Optional::ofNullable)
+                .flatMap(Optional::stream)
                 .map(row -> {
-                    if (row == null) {
-                        logger.warn("Строка не обнаружена");
-                        throw new NullPointerException("Row not found");
+                    try {
+                        return new Student(
+                                row.getCell(CELL_1).getStringCellValue(),
+                                row.getCell(CELL_2).getStringCellValue(),
+                                (int) row.getCell(CELL_3).getNumericCellValue(),
+                                (int) row.getCell(CELL_4).getNumericCellValue());
+                    } catch (Exception e) {
+                        logger.error("Ошибка парсинга строки {}: {}", row.getRowNum(), e.getMessage());
+                        return null;
                     }
-                    return new Student(
-                            row.getCell(CELL_1).getStringCellValue(),
-                            row.getCell(CELL_2).getStringCellValue(),
-                            (int) row.getCell(CELL_3).getNumericCellValue(),
-                            (int) row.getCell(CELL_4).getNumericCellValue()
-                    );
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 }
